--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_chicago">Chicago</string>
     <string name="action_dubai">Dubai</string>
     <string name="action_london">london</string>
+    <string name="title_activity_detail">DetailActivity</string>
 
 </resources>
