Design support Lib 적용 , Retro fit 적용

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,10 @@
     <string name="action_chicago">Chicago</string>
     <string name="action_dubai">Dubai</string>
     <string name="action_london">london</string>
+    <string name="navigation_subheader">navigation_subheader</string>
+    <string name="navigation_sub_item_1">subitem1</string>
+    <string name="navigation_sub_item_2">subitem2</string>
+    <string name="search_hint">City name</string>
+    <string name="refresh">Refresh the data.</string>
 
 </resources>
